--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style-hover.css">
     <link rel="stylesheet" href="style-mobile.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
 </head>
 
 <body>
@@ -365,7 +370,8 @@
             <div class="expertsTray">
                 <div class="expertsDetails">
                     <img src="images/testimonial-user-cover-23.png" alt="">
-                    <p>Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                    <p>Slate helps you see how many more days you need to work to reach your financial goal for the
+                        month and year.</p>
                     <div class="stars">
                         <img src="images/icn bxs-star.svg" alt="">
                         <img src="images/icn bxs-star.svg" alt="">
@@ -379,7 +385,8 @@
 
                 <div class="expertsDetails">
                     <img src="images/testimonial-user-cover-24.png" alt="">
-                    <p>Slate helps you see how many more days you need to work to reach your financial goal for the month and year.</p>
+                    <p>Slate helps you see how many more days you need to work to reach your financial goal for the
+                        month and year.</p>
                     <div class="stars">
                         <img src="images/icn bxs-star.svg" alt="">
                         <img src="images/icn bxs-star.svg" alt="">
